--- a/src/components/Layout/Footer/style.css
+++ b/src/components/Layout/Footer/style.css
@@ -1,13 +1,12 @@
-/* style.css */
-
 .footer {
   background-color: #282c34;
   color: #61dafb;
   padding: 1rem;
   text-align: center;
   width: 100%;
-  position: relative;
+  position: fixed;
   bottom: 0;
+  left: 0;
 }
 
 .footer-content {
