--- a/src/components/Layout/Navbar/style.css
+++ b/src/components/Layout/Navbar/style.css
@@ -1,4 +1,4 @@
-/* style.css */
+/* components/Layout/Navbar/style.css */
 
 .navbar {
   background-color: #282c34;
@@ -18,18 +18,23 @@
   max-width: 1200px;
 }
 
-.title {
-  font-size: 1.5rem;
-  color: #61dafb;
+.links {
+  display: flex;
+  gap: 1rem;
 }
 
-.navbar .links a {
+.links a {
   color: #61dafb;
-  margin-left: 1rem;
   text-decoration: none;
   transition: color 0.3s;
 }
 
-.navbar .links a:hover {
+.links .title-link {
+  font-size: 2rem;
+}
+
+.links a:hover,
+.links .title-link:hover {
   color: #21a1f1;
+  text-decoration: none;
 }
