--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -1,15 +1,11 @@
-body {
-  margin: 0;
-  font-family: "Arial", sans-serif;
-  background-color: #1e1e1e;
-  color: #c5c6c7;
-}
-
 .login-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: calc(
+    100vh - 8rem
+  ); 
+  width: 100%; 
   background-color: #1e1e1e;
 }
 
@@ -19,7 +15,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
-  max-width: 400px;
+  max-width: 400px; 
   text-align: center;
 }
 
