--- a/src/pages/Register/style.css
+++ b/src/pages/Register/style.css
@@ -4,7 +4,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: calc(
+    100vh - 8rem
+  );
+  width: 100%;
   background-color: #1e1e1e;
 }
 
